--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">DataBindingTutorial</string>
 
-    <string name="nameFormat">%1$s %2$s</string>
+    <string name="nameFormat">%1$s %2$s ( %3$s )</string>
 </resources>
